# market_data_server

./: .gitignore  README.md  docker-compose.yaml
server/: Cargo.toml  Dockerfile
server/src/: main.rs  stock_price.rs
utilities/producer/: Dockerfile  producer.py
