[package]
name = "market_data_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3.5", features = ["cors"] }
rdkafka = { version = "0.23" }

